[gd_scene load_steps=10 format=3 uid="uid://drklbqrgqoq1p"]

[ext_resource type="Texture2D" uid="uid://bjf04nx1tna6b" path="res://assets/icons/more_info.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://wdi7id6fbtjw" path="res://assets/icons/play.svg" id="5"]
[ext_resource type="Script" path="res://scenes/game_box/GameBox.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://b4o61u01lrlcc" path="res://scenes/media/Video.tscn" id="7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3t8rh"]
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Animation" id="1"]
resource_name = "Fade In Video"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Media:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Video:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Video")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play"
}]
}

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Media:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Video")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Video:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nynbt"]
_data = {
"Fade In Video": SubResource("1"),
"RESET": SubResource("2")
}

[sub_resource type="LabelSettings" id="LabelSettings_ban1r"]
font_size = 14

[node name="GameBox" type="Button"]
custom_minimum_size = Vector2(180, 140)
anchors_preset = -1
anchor_right = 0.176
anchor_bottom = 0.243
offset_right = -0.224014
offset_bottom = 0.0319977
theme_override_styles/focus = SubResource("StyleBoxFlat_3t8rh")
script = ExtResource("6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="MediaRoot" type="Control" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Video" parent="VBoxContainer/MarginContainer/MediaRoot" instance=ExtResource("7")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
loop = true
volume_db = -80.0

[node name="Media" type="TextureRect" parent="VBoxContainer/MarginContainer/MediaRoot"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6

[node name="Anim" type="AnimationPlayer" parent="VBoxContainer/MarginContainer/MediaRoot"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nynbt")
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sample Text"
label_settings = SubResource("LabelSettings_ban1r")
autowrap_mode = 3
clip_text = true

[node name="MoreInfo" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
focus_mode = 0
icon = ExtResource("4")

[node name="MoreInfoRoot" type="Control" parent="VBoxContainer/HBoxContainer/MoreInfo"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -20.0
offset_top = -19.0
offset_right = 10.0
offset_bottom = 11.0

[node name="PlayContainer" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 33.0
mouse_filter = 2
color = Color(0, 0, 0, 0.360784)

[node name="PlayIconRoot" type="Control" parent="PlayContainer"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 35.0
offset_bottom = 31.0

[node name="Play" type="TextureRect" parent="PlayContainer"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
texture = ExtResource("5")

[node name="LabelNoMeta" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -49.0
text = "Game no metadata"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[connection signal="focus_entered" from="." to="." method="_on_GameBox_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_GameBox_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_GameBox_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_GameBox_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoreInfo" to="." method="_on_MoreInfo_pressed"]
